# QtFinder

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/: Events.h  QtFinderAbstractComponents.h  QtFinderApp.h  QtFinderCmd.h  QtFinderTool.h  QtFinderWindow.h  QtFinderWindow.h.bak  QtFinderWindow.ui  Quickfix.h  QuickfixLabel.h  QuickfixWidget.h  SearchLineEdit.h
include/private/: QtFinderWindow.ui  QtFinderWindow_p.h
src/: DesktopServiceImpl.cpp  DesktopServiceImpl.h  Events.cpp  FileSystemScannerImpl.cpp  FileSystemScannerImpl.h  QtFinderApp.cpp  QtFinderAppCreater.cpp  QtFinderApp_p.cpp  QtFinderApp_p.h  QtFinderTool.cpp  QtFinderToolImpl.cpp  QtFinderToolImpl.h  QtFinderWindow.cpp  QtFinderWindow.cpp.autosave  QtFinderWindow.cpp.bak  QtFinderWindowImpl.cpp  QtFinderWindowImpl.h  Quickfix.cpp  QuickfixLabel.cpp  QuickfixWidget.cpp  SearchLineEdit.cpp  main.cpp
src/ui/: QtFinderWindow_p.cpp
test/: CMakeLists.txt  GuiComponentsTest.cpp  QtFinderAppTest.cpp  QtFinderToolTest.cpp  QtFinderWindowPrivateTest.cpp  QtFinderWindowTest.cpp  gui_main_window_test.cpp  ui_main_delegete_test.cpp
ui/: main.ui  ui_main.h
